update index page, added screenshots, books page

--- a/templates/download.html
+++ b/templates/download.html
@@ -2,11 +2,9 @@
 {% set active_page = 'download' %}
 {% block title %}Download{% endblock %}
 {% block content %}
+</style>
     <div id="doc">
     <h2 id="left-heading">Download</h2>
-
-    <p>
-        <a name="stable"></a>
     <table width="100%" border="1" cellspacing="0" cellpadding="8">
     <tbody>
     <tr>
@@ -34,12 +32,8 @@
         you need the ansi version, the ansi builds are in the process of being
         phased out.
     </p>
-
-    <p></p>
-
     <div style="padding-left: 1cm;">
         <table border="0" cellspacing="0" cellpadding="4">
-
             <tbody>
             <tr>
                 <td nowrap=""><font size="-1">
@@ -51,7 +45,6 @@
                 </font></td>
                 <td><font size="-1">32-bit Python 2.6</font></td>
             </tr>
-
             <tr>
                 <td nowrap=""><font size="-1">
                     <a href="http://downloads.sourceforge.net/wxpython/wxPython2.8-win64-unicode-2.8.12.1-py26.exe">
@@ -59,7 +52,6 @@
                 </font></td>
                 <td><font size="-1">64-bit Python 2.6</font></td>
             </tr>
-
             <tr>
                 <td nowrap=""><font size="-1">
                     <a href="http://downloads.sourceforge.net/wxpython/wxPython2.8-win32-unicode-2.8.12.1-py27.exe">
@@ -70,7 +62,6 @@
                 </font></td>
                 <td><font size="-1">32-bit Python 2.7</font></td>
             </tr>
-
             <tr>
                 <td nowrap=""><font size="-1">
                     <a href="http://downloads.sourceforge.net/wxpython/wxPython2.8-win64-unicode-2.8.12.1-py27.exe">
@@ -82,19 +73,12 @@
         </table>
         <p></p>
     </div>
-
-
     <p>
         <font face="sans-serif" size="+1"><b>wxPython Demo for
             Windows</b></font><br>
-
         This installer contains the infamous wxPython demo, other samples, and
         wxWidgets documentation.
-
     </p>
-
-    <p></p>
-
     <div style="padding-left: 1cm;">
         <table border="0" cellspacing="0" cellpadding="4">
             <tbody>
@@ -107,23 +91,14 @@
             </tbody>
         </table>
     </div>
-    <p></p>
-
-
     <p>
-        <font face="sans-serif" size="+1"><b>Windows Development
-            Files</b></font><br>
-
+        <font face="sans-serif" size="+1"><b>Windows Development Files</b></font><br>
         These archives contain the wxWidgets headers, libraries and other files
         that might be needed if you
         want to build your own wx extension modules that link with the same
         version of the wxWidgets DLLs
         distributed with wxPython.
-
     </p>
-
-    <p></p>
-
     <div style="padding-left: 1cm;">
         <table border="0" cellspacing="0" cellpadding="4">
             <tbody>
@@ -138,9 +113,6 @@
             </tbody>
         </table>
     </div>
-    <p></p>
-
-
     <p>
         <font face="sans-serif" size="+1"><b>Mac OSX Binaries</b></font><br>
         The wxPython binaries for OSX are mountable disk images. Simply double
@@ -155,12 +127,7 @@
         should work on all versions of OSX from 10.3.9 onwards on either PPC or
         i386 architectures. Since
         they use the Carbon API they are limited to running in 32-bit mode.
-
-
     </p>
-
-    <p></p>
-
     <div style="padding-left: 1cm;">
         <table border="0" cellspacing="0" cellpadding="4">
             <tbody>
@@ -185,27 +152,17 @@
                 </font></td>
                 <td><font size="-1"></font></td>
             </tr>
-
-
             </tbody>
         </table>
     </div>
-    <p></p>
-
-
     <p>
         <font face="sans-serif" size="+1"><b>wxPython demo for Mac
             OSX</b></font><br>
         These disk images contain the wxPython demo, the documentation, some
         other samples and some tools.
-
     </p>
-
-    <p></p>
-
     <div style="padding-left: 1cm;">
         <table border="0" cellspacing="0" cellpadding="4">
-
             <tbody>
             <tr>
                 <td nowrap=""><font size="-1">
@@ -214,7 +171,6 @@
                 </font></td>
                 <td></td>
             </tr>
-
             <tr>
                 <td nowrap=""><font size="-1">
                     <a href="http://downloads.sourceforge.net/wxpython/wxPython2.8-osx-docs-demos-2.8.12.1-universal-py2.7.dmg">
@@ -222,14 +178,9 @@
                 </font></td>
                 <td><font size="-1"></font></td>
             </tr>
-
-
             </tbody>
         </table>
     </div>
-    <p></p>
-
-
     <p>
         <font face="sans-serif" size="+1"><b>Linux Binaries</b></font><br>
         To get prebuilt binaries for Linux or other platforms, please search in
@@ -241,26 +192,18 @@
 
         If all else fails you can build wxPython yourself from the source code,
         see the next section.
-
-
     </p>
-
     <p>
         <font face="sans-serif" size="+1"><b>Source Code and Other Tarballs</b></font><br>
         If you need to build wxPython yourself then you can do so with the first
         file in this list and using
         these <a href="BUILD-2.8.html">build instructions</a>.
     </p>
-
     <p>The other files here are useful for learning <a
             href="http://wiki.wxpython.org/How%20to%20Learn%20wxPython">how to
         use wxPython</a>.</p>
-
-    <p></p>
-
     <div style="padding-left: 1cm;">
         <table border="0" cellspacing="0" cellpadding="4">
-
             <tbody>
             <tr>
                 <td nowrap=""><font size="-1">
@@ -269,7 +212,6 @@
                 <td><font size="-1">All of the wxWidgets and wxPython source
                     code.</font></td>
             </tr>
-
             <tr>
                 <td nowrap=""><font size="-1">
                     <a href="http://downloads.sourceforge.net/wxpython/wxPython-docs-2.8.12.1.tar.bz2">wxPython-docs</a>
@@ -277,7 +219,6 @@
                 <td><font size="-1">The plain HTML files for the wxWidgets
                     documentation</font></td>
             </tr>
-
             <tr>
                 <td nowrap=""><font size="-1">
                     <a href="http://downloads.sourceforge.net/wxpython/wxPython-demo-2.8.12.1.tar.bz2">wxPython-demo</a>
@@ -286,27 +227,19 @@
                     other sample
                     applications.</font></td>
             </tr>
-
-
             </tbody>
         </table>
     </div>
-    <p></p>
-
-
-    <p></p>
     </td>
     </tr>
     </tbody>
     </table>
-
     <a name="unstable"></a>
     <table width="100%" border="1" cellspacing="0" cellpadding="8">
     <tbody>
     <tr>
         <td>
-            <font face="sans-serif" size="+1"><b>Development
-                Release</b></font><br>
+            <font face="sans-serif" size="+1"><b>Development Release</b></font><br>
             These files are for the most recent release in the "unstable" or
             development <a
                 href="http://wiki.wxpython.org/ReleaseSeries">release series</a>
@@ -320,11 +253,8 @@
     </tr>
     <tr>
     <td>
-
-
     <p>
         <font face="sans-serif" size="+1"><b>Windows Binaries</b></font><br>
-
         Choose an installer that matches the version of Python you will be
         using. If you are using a 64-bit
         version of Python then make sure you also get a 64-bit wxPython,
@@ -334,15 +264,9 @@
         build, it's all Unicode now (although string objects passed to wx APIs
         will still be converted
         automatically if possible.)
-
-
     </p>
-
-    <p></p>
-
     <div style="padding-left: 1cm;">
         <table border="0" cellspacing="0" cellpadding="4">
-
             <tbody>
             <tr>
                 <td nowrap=""><font size="-1">
@@ -351,7 +275,6 @@
                 </font></td>
                 <td><font size="-1">32-bit Python 2.6</font></td>
             </tr>
-
             <tr>
                 <td nowrap=""><font size="-1">
                     <a href="http://downloads.sourceforge.net/wxpython/wxPython2.9-win64-2.9.4.0-py26.exe">
@@ -359,7 +282,6 @@
                 </font></td>
                 <td><font size="-1">64-bit Python 2.6</font></td>
             </tr>
-
             <tr>
                 <td nowrap=""><font size="-1">
                     <a href="http://downloads.sourceforge.net/wxpython/wxPython2.9-win32-2.9.4.0-py27.exe">
@@ -367,7 +289,6 @@
                 </font></td>
                 <td><font size="-1">32-bit Python 2.7</font></td>
             </tr>
-
             <tr>
                 <td nowrap=""><font size="-1">
                     <a href="http://downloads.sourceforge.net/wxpython/wxPython2.9-win64-2.9.4.0-py27.exe">
@@ -379,19 +300,12 @@
         </table>
         <p></p>
     </div>
-
-
     <p>
         <font face="sans-serif" size="+1"><b>wxPython Demo for
             Windows</b></font><br>
-
         This installer contains the infamous wxPython demo, other samples, and
         wxWidgets documentation.
-
     </p>
-
-    <p></p>
-
     <div style="padding-left: 1cm;">
         <table border="0" cellspacing="0" cellpadding="4">
             <tbody>
@@ -404,13 +318,9 @@
             </tbody>
         </table>
     </div>
-    <p></p>
-
-
     <p>
         <font face="sans-serif" size="+1"><b>Windows Development
             Files</b></font><br>
-
         These installers contain the wxWidgets headers, libraries and other
         files that might be needed if
         you want to build your own wx extension modules that link with the same
@@ -418,11 +328,7 @@
         DLLs distributed with wxPython. It is essentially a snapshot of the
         source tree with wxWidgets
         pre-built.
-
     </p>
-
-    <p></p>
-
     <div style="padding-left: 1cm;">
         <table border="0" cellspacing="0" cellpadding="4">
             <tbody>
@@ -437,9 +343,6 @@
             </tbody>
         </table>
     </div>
-    <p></p>
-
-
     <p>
         <font face="sans-serif" size="+1"><b>Mac OSX Binaries</b></font><br>
         The wxPython binaries for OSX are mountable disk images. Simply double
@@ -457,12 +360,7 @@
         both the Carbon and Cocoa versions installed you will need to do
         something like install the Carbon
         build for Python 2.6 and install the Cocoa build for Python 2.7.
-
-
     </p>
-
-    <p></p>
-
     <div style="padding-left: 1cm;">
         <table border="0" cellspacing="0" cellpadding="4">
             <tbody>
@@ -473,7 +371,6 @@
                 </font></td>
                 <td></td>
             </tr>
-
             <tr>
                 <td nowrap=""><font size="-1">
                     <a href="http://downloads.sourceforge.net/wxpython/wxPython2.9-osx-2.9.4.0-carbon-py2.7.dmg">
@@ -481,7 +378,6 @@
                 </font></td>
                 <td></td>
             </tr>
-
             <tr>
                 <td nowrap=""><font size="-1">
                     <a href="http://downloads.sourceforge.net/wxpython/wxPython2.9-osx-2.9.4.0-cocoa-py2.7.dmg">
@@ -489,14 +385,9 @@
                 </font></td>
                 <td></td>
             </tr>
-
-
             </tbody>
         </table>
     </div>
-    <p></p>
-
-
     <p>
         <font face="sans-serif" size="+1"><b>wxPython demo for Mac
             OSX</b></font><br>
@@ -504,12 +395,8 @@
         other samples and some tools.
 
     </p>
-
-    <p></p>
-
     <div style="padding-left: 1cm;">
         <table border="0" cellspacing="0" cellpadding="4">
-
             <tbody>
             <tr>
                 <td nowrap=""><font size="-1">
@@ -518,7 +405,6 @@
                 </font></td>
                 <td></td>
             </tr>
-
             <tr>
                 <td nowrap=""><font size="-1">
                     <a href="http://downloads.sourceforge.net/wxpython/wxPython2.9-osx-docs-demos-2.9.4.0-carbon-py2.7.dmg">
@@ -526,7 +412,6 @@
                 </font></td>
                 <td></td>
             </tr>
-
             <tr>
                 <td nowrap=""><font size="-1">
                     <a href="http://downloads.sourceforge.net/wxpython/wxPython2.9-osx-docs-demos-2.9.4.0-cocoa-py2.7.dmg">
@@ -534,14 +419,9 @@
                 </font></td>
                 <td></td>
             </tr>
-
-
             </tbody>
         </table>
     </div>
-    <p></p>
-
-
     <p>
         <font face="sans-serif" size="+1"><b>Linux Binaries</b></font><br>
         To get prebuilt binaries for Linux or other platforms, please search in
@@ -553,26 +433,18 @@
 
         If all else fails you can build wxPython yourself from the source code,
         see the next section.
-
-
     </p>
-
     <p>
         <font face="sans-serif" size="+1"><b>Source Code and Other Tarballs</b></font><br>
         If you need to build wxPython yourself then you can do so with the first
         file in this list and using
         these <a href="BUILD.html">build instructions</a>.
     </p>
-
     <p>The other files here are useful for learning <a
             href="http://wiki.wxpython.org/How%20to%20Learn%20wxPython">how to
         use wxPython</a>.</p>
-
-    <p></p>
-
     <div style="padding-left: 1cm;">
         <table border="0" cellspacing="0" cellpadding="4">
-
             <tbody>
             <tr>
                 <td nowrap=""><font size="-1">
@@ -581,7 +453,6 @@
                 <td><font size="-1">All of the wxWidgets and wxPython source
                     code.</font></td>
             </tr>
-
             <tr>
                 <td nowrap=""><font size="-1">
                     <a href="http://downloads.sourceforge.net/wxpython/wxPython-docs-2.9.4.0.tar.bz2">wxPython-docs</a>
@@ -589,7 +460,6 @@
                 <td><font size="-1">The plain HTML files for the wxWidgets
                     documentation</font></td>
             </tr>
-
             <tr>
                 <td nowrap=""><font size="-1">
                     <a href="http://downloads.sourceforge.net/wxpython/wxPython-demo-2.9.4.0.tar.bz2">wxPython-demo</a>
@@ -601,9 +471,6 @@
             </tbody>
         </table>
     </div>
-    <p></p>
-
-    <p></p>
     </td>
     </tr>
     </tbody>
