--- a/templates/index.html
+++ b/templates/index.html
@@ -41,11 +41,13 @@
     </div>
     <div id="mid">
       <h3>Screenshots</h3>
-      {#<img src="static/img/mid_latest01.png" width="310" height="173" alt="Devise Function" />#}
+      <img src="/static/img/ss/wx/test3.gif" width="310" alt="Devise Function" />
       <p>Some screenshots of appications when use wxPython library</p>
       <a class="read-more" href="/screenshots/">Read More</a>
-      {#<img src="static/img/mid_latest02.png" width="310" height="173" alt="Latest 02" />
-      <p>Integer nec augue ac est semper pulvinar. Aenean luctus, leo in tincidunt mattis, enim diam convallis tellus, in vulputate enim tortor quis nisl. Curabitur nibh magna,</p>#}
+      <h3>Books</h3>
+      <img src="/static/img/wxPyBook_cover_150.png" alt="wxPython in Action" width="155">
+      <p>Book about development with wxPython</p>
+      <a class="read-more" href="/books/">Read More</a>
     </div>
     <div id="right">
       <h3>Recent changes</h3>
