--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -211,8 +211,14 @@ ul.controls {
     font-size: 16px;
     margin-bottom: 70px;
 }
-#doc h2{
+#doc h2 {
     width: 310px;
+}
+#doc td, #doc tr, #doc table {
+  border: none;
+}
+#doc td {
+    padding: 0 0 5px;
 }
 #mid { margin-bottom:30px; }
 #left-heading, #mid-heading, #right-heading {
@@ -225,7 +231,7 @@ ul.controls {
 #right-heading { background-position: -649px 0; }
 a.read-more {
 	display:block;
-	padding-bottom:36px;
+	padding-bottom:20px;
 	width:100%;
 	height:39px;
 	background:url(../img/bg_divider.png) no-repeat top left;
