--- a/templates/base.html
+++ b/templates/base.html
@@ -36,10 +36,14 @@
     </div>
 </div>
 <div id="footer">
-    <div id="footer-inside"><img style="float:left; clear:both;"
-                                 src="/static/img/footer_social_media.png"
-                                 width="153"
-                                 height="60" alt="social media"/>
+    <div id="footer-inside">
+      <div id="banners">
+        <!-- <a href="http://wxPROs.com/"><img src="images/wxPROsButton.png" width="100" height="43" alt="" border="0"></a> -->
+        <a href="http://wxWidgets.org/"><img src="/static/img/wxWinButton.png" border="0" width="100" height="43" alt=""></a>
+          <a href="http://wxPython.org/"><img src="/static/img/wxPyButton.png" width="100" height="43" alt="" border="0"></a>
+            <a href="http://www.wxdesigner-software.de/"><img src="/static/img/wxDesignerButton.png" width="100" height="43" alt="" border="0"></a>
+              <a href="http://sourceforge.net/projects/wxpython/"><img src="http://sourceforge.net/sflogo.php?group_id=10718&amp;type=1" width="100" height="43" border="0" alt="SourceForge Logo"></a>
+              </div>
         <ul id="foot-nav">
             <li><a href="/"><span>Home</span></a></li>
             <li><a href="/introduction/"><span>About</span></a></li>
