--- a/templates/index.html
+++ b/templates/index.html
@@ -41,7 +41,7 @@
     </div>
     <div id="mid">
       <h3>Screenshots</h3>
-      <img src="/static/img/ss/wx/test3.gif" width="310" alt="Devise Function" />
+      <img src="/static/img/ss/wx/test3.png" width="310" alt="Devise Function" />
       <p>Some screenshots of appications when use wxPython library</p>
       <a class="read-more" href="/screenshots/">Read More</a>
       <h3>Books</h3>
