--- a/templates/wxpshots.html
+++ b/templates/wxpshots.html
@@ -9,7 +9,7 @@
 This one shows a bit of the drawing capabilities.
 
 </p><p>
-<img src="/static/img/ss/wx/test2.gif" width="320" height="200" alt="" border="0">
+<img src="/static/img/ss/wx/test2.png" alt="" border="0">
 
 </p><p></p><hr><p>
 
@@ -17,14 +17,12 @@ This one shows a bit of the drawing capabilities.
 One of my favorites!
 
 </p><p>
-<img src="/static/img/ss/wx/test3.gif" width="529" height="228" alt="" border="0">
+<img src="/static/img/ss/wx/test3.png" alt="" border="0">
 
 </p><p></p><hr><p>
 This one shows the text control in multi-line mode.  In this window it is used as a place to log messages from various events that are captured by child windows.</p><p>
 
 <img src="/static/img/ss/wx/test4.gif" width="420" height="200" alt="" border="0">
-
-
 
 </p>
 <p></p><hr><p>
@@ -34,30 +32,30 @@ A simple Dialog box showing off some of the controls</p><p>
 
 </p><p></p><hr><p>
 This is a Layout Constraints demo window.  As the frame is resized the panels will resize as well in accordance to the attachments and relative sizes defined by the constraints.</p><p>
-<img src="/static/img/ss/wx/test4b.gif" width="500" height="300" alt="" border="0">
+<img src="/static/img/ss/wx/test4b.png" alt="" border="0">
 
 </p><p></p><hr><p>
 The wxGrid.  Many attributes of the rows, columns and cells are definable</p><p>
-<img src="/static/img/ss/wx/test4c.gif" width="505" height="326" alt="" border="0">
+<img src="/static/img/ss/wx/test4c.png" alt="" border="0">
 
 </p><p></p><hr><p>
 
 The sash in the middle is dragable, and the child windows are sized automatically.</p><p>
-<img src="/static/img/ss/wx/test4d.gif" width="500" height="300" alt="" border="0">
+<img src="/static/img/ss/wx/test4d.png" alt="" border="0">
 
 
 </p><p></p><hr><p>
 
 The wxNotebook controls.  The child windows can be anything except frame windows, so you can put the traditional Panel and Dialog controls there, or custom windows of your own creation.  The tabs can also contain images in addition to the label.</p><p>
-<img src="/static/img/ss/wx/test4e.gif" width="376" height="300" alt="" border="0">
+<img src="/static/img/ss/wx/test4e.png" alt="" border="0">
 
 </p><p></p><hr><p>
 This one shows a custom StatusBar that was implemented in wxPython and then attached to the frame.</p><p>
-<img src="/static/img/ss/wx/test4f.gif" width="500" height="189" alt="" border="0">
+<img src="/static/img/ss/wx/test4f.png" alt="" border="0">
 
 </p><p></p><hr><p>
 Hmmm... Not sure what this is... :-)</p><p>
-<img src="/static/img/ss/wx/test4g.gif" width="500" height="216" alt="" border="0">
+<img src="/static/img/ss/wx/test4g.png" alt="" border="0">
 
 </p><p></p><hr><p>
 
@@ -102,7 +100,7 @@ This is one that I am mighty proud of.  Based on an idea from Harm van der Heijd
 <a name="calendar"></a>
 A calendar control contributed by Lorne White.
 </p><p>
-<img src="/static/img/ss/wx/calendar.gif" width="280" height="300" alt="" border="0">
+<img src="/static/img/ss/wx/calendar.png" alt="" border="0">
 
 
 </p>
