--- a/templates/screenshots.html
+++ b/templates/screenshots.html
@@ -10,7 +10,7 @@
             Here is a screen shot of the "minimal" wxPython application:</p>
 
         <p>
-            <img src="/static/img/ss/test1.gif" width="160" height="100" alt=""
+            <img src="/static/img/ss/test1.png" alt=""
                  border="0">
         </p>
 
@@ -32,7 +32,7 @@
         </p>
 
         <p>
-            <img src="/static/img/ss/test7.gif" width="211" height="146" alt=""
+            <img src="/static/img/ss/test7.png" alt=""
                  border="0">
 
         </p>
@@ -55,8 +55,7 @@
         </p>
 
         <p>
-            <img src="/static/img/ss/pyshell.png" width="767" height="659"
-                 alt="" border="0">
+            <img src="/static/img/ss/pyshell.png" alt="" border="0">
 
         </p>
 
@@ -67,8 +66,7 @@
         </p>
 
         <p>
-            <img src="/static/img/ss/wxPythonUnicodeDemo.jpg" width="800"
-                 height="600" alt="" border="0">
+            <img src="/static/img/ss/wxPythonUnicodeDemo.png" alt="" border="0">
 
         </p>
 
@@ -79,8 +77,7 @@
         </p>
 
         <p>
-            <img src="/static/img/ss/wxPythonOSX.png" width="829" height="669"
-                 alt="" border="0">
+            <img src="/static/img/ss/wxPythonOSX.png" border="0">
 
         </p>
 
