--- a/templates/download.html
+++ b/templates/download.html
@@ -197,7 +197,7 @@
         <font face="sans-serif" size="+1"><b>Source Code and Other Tarballs</b></font><br>
         If you need to build wxPython yourself then you can do so with the first
         file in this list and using
-        these <a href="BUILD-2.8.html">build instructions</a>.
+        these <a href="/download/build28/">build instructions</a>.
     </p>
     <p>The other files here are useful for learning <a
             href="http://wiki.wxpython.org/How%20to%20Learn%20wxPython">how to
@@ -438,7 +438,7 @@
         <font face="sans-serif" size="+1"><b>Source Code and Other Tarballs</b></font><br>
         If you need to build wxPython yourself then you can do so with the first
         file in this list and using
-        these <a href="BUILD.html">build instructions</a>.
+        these <a href="/download/build/">build instructions</a>.
     </p>
     <p>The other files here are useful for learning <a
             href="http://wiki.wxpython.org/How%20to%20Learn%20wxPython">how to
