--- a/templates/introduction.html
+++ b/templates/introduction.html
@@ -30,6 +30,11 @@
 
         <p> Since the language is Python, wxPython programs are <b>simple,
             easy</b> to write and easy to understand. <a
-                href="test7.py.html">Here</a> is an example.</p>
+                href="/examples/test7/">Here</a> is an example.</p>
+        <div align="center">
+            <font size="+1" style="font-family: sans-serif;"><b>
+                <a href="http://wiki.wxpython.org/How_to_Learn_wxPython">How to Learn wxPython</a>
+            </b></font>
+        </div>
     </div>
 {% endblock %}
