--- a/templates/index.html
+++ b/templates/index.html
@@ -32,16 +32,20 @@
       <h3>Quotes</h3>
       <p>Here's what people are saying about wxPython...</p>
       <a class="read-more" href="/quotes/">Read More</a>
+      <h3>Get the T-shirt</h3>
+      <img src="/static/img/wxpython_white_tshirt.jpeg" width="155" alt="" />
+      <p>Buy a nice T-shirt and other</p>
+      <a class="read-more" href="http://www.cafepress.com/wxpython/">Buy</a>
       <h3>How to learn wxPython</h3>
       <p>We have had a lot of questions on the newsgroup asking how to go about learning wxPython. This page gives some pointers on how to do just that.</p>
       <a class="read-more" href="http://wiki.wxpython.org/How_to_Learn_wxPython">Read More</a>
-      <h3>Search Engine Optimization</h3>
-      <p>Quisque tincidunt aliquam justo, eu volutpat odio tempus nec. Fusce semper tortor a tellus ornare sed consequat diam elementum. Quisque tincidunt aliquam justo, eu volutpat odio tempus nec. Fusce semper...</p>
-      <a class="read-more" href="#readmore">Read More</a>
+      <h3>Presentations</h3>
+      <p>Presentation from conferencies</p>
+      <a class="read-more" href="/presentations/">Read More</a>
     </div>
     <div id="mid">
       <h3>Screenshots</h3>
-      <img src="/static/img/ss/wx/test3.png" width="310" alt="Devise Function" />
+      <img src="/static/img/ss/wx/test3.png" width="250" alt="Devise Function" />
       <p>Some screenshots of appications when use wxPython library</p>
       <a class="read-more" href="/screenshots/">Read More</a>
       <h3>Books</h3>
@@ -62,6 +66,10 @@
         <li><strong><a href="#">Morbi vestibulum</a></strong></li>
         <li><strong><a href="#">Fusce semper tortor a tellus</a></strong><a href="#"></a></li>
       </ul>
+      <a class="read-more" href="/changes/">Read More</a>
+      <h3>Search</h3>
+      <p>Search by site</p>
+      <a class="read-more" href="/search/">Search</a>
       {#<div id="newsletter">
         <p>Subscribe to get the latest updates delivered right to your inbox. What's not to love?</p>
         <p id="newsletter-input">
