--- a/templates/index.html
+++ b/templates/index.html
@@ -1,5 +1,6 @@
 {% extends 'base.html' %}
 {% set active_page = 'index' %}
+{% block title %}wxPython{% endblock %}
 {% block precontent %}
     <div id="featured">
         <div id="feature-description">
