--- a/templates/introduction.html
+++ b/templates/introduction.html
@@ -3,38 +3,37 @@
 {% block title %}What is wxPython?{% endblock %}
 {% block content %}
     <div id="doc">
-        <h2 id="left-heading">About</h2>
+      <h2 id="left-heading">About</h2>
 
-        <p>
-
-        <p> wxPython is a <b>GUI toolkit</b> for the <a
-                href="http://www.python.org/">Python</a> programming language.
-            It
-            allows Python programmers to create programs with a robust, highly
-            functional graphical user interface, simply and easily. It is
-            implemented as a Python extension module (native code) that wraps
-            the
-            popular <a href="http://wxwidgets.org/">wxWidgets</a> cross platform
-            GUI library, which is written in C++.
+      <p> wxPython is a <b>GUI toolkit</b> for the <a href="http://www.python.org/">Python</a> programming language.
+        It
+        allows Python programmers to create programs with a robust, highly
+        functional graphical user interface, simply and easily. It is
+        implemented as a Python extension module (native code) that wraps
+        the
+        popular <a href="http://wxwidgets.org/">wxWidgets</a> cross platform
+        GUI library, which is written in C++.</p>
 
         <p> Like Python and wxWidgets, wxPython is <b>Open Source</b> which
-            means that it is free for anyone to use and the source code is
-            available for anyone to look at and modify. Or anyone can contribute
-            fixes or enhancements to the project.
+          means that it is free for anyone to use and the source code is
+          available for anyone to look at and modify. Or anyone can contribute
+          fixes or enhancements to the project.
+        </p>
 
         <p> wxPython is a <b>cross-platform</b> toolkit. This means that the
-            same program will run on multiple platforms without modification.
-            Currently supported platforms are 32-bit Microsoft Windows, most
-            Unix
-            or unix-like systems, and Macintosh OS X.
+          same program will run on multiple platforms without modification.
+          Currently supported platforms are 32-bit Microsoft Windows, most
+          Unix
+          or unix-like systems, and Macintosh OS X.
+        </p>
 
         <p> Since the language is Python, wxPython programs are <b>simple,
             easy</b> to write and easy to understand. <a
-                href="/examples/test7/">Here</a> is an example.</p>
-        <div align="center">
-            <font size="+1" style="font-family: sans-serif;"><b>
-                <a href="http://wiki.wxpython.org/How_to_Learn_wxPython">How to Learn wxPython</a>
-            </b></font>
-        </div>
+            href="/examples/test7/">Here</a> is an example.</p>
+            <div align="center">
+              <font size="+1" style="font-family: sans-serif;"><b>
+                  <a href="http://wiki.wxpython.org/How_to_Learn_wxPython">How to Learn wxPython</a>
+              </b></font>
+            </div>
     </div>
 {% endblock %}
