--- a/templates/changes.html
+++ b/templates/changes.html
@@ -1,12 +1,9 @@
 {% extends 'base.html' %}
-{% block title %}{% endblock %}
+{% block title %}Recent Changes for wxPython{% endblock %}
 {% block content %}
 
     <div id="doc">
-    <h2 id="left-heading">Our Services</h2>
-
-    <div class="document" id="recent-changes-for-wxpython">
-    <h1 class="title">Recent Changes for wxPython</h1>
+    <h2 id="left-heading">Recent Changes for wxPython</h2>
 
     <!-- -*- coding: utf-8 -*- -->
     <div class="section" id="id1">
@@ -5364,7 +5361,6 @@ win = wxWindow(parent, size = (100, 100))
             <a class="reference external"
                href="http://wiki.wxpython.org/index.cgi/WxPythonHistory">http://wiki.wxpython.org/index.cgi/WxPythonHistory</a>
         </p>
-    </div>
     </div>
     </div>
 {% endblock %}
