--- a/templates/index.html
+++ b/templates/index.html
@@ -57,15 +57,14 @@
     <div id="right">
       <h3>Recent changes</h3>
       <ul id="recent-entries">
-        <li><a href="#"><strong>Lorem ipsum dolor sit amet</strong></a></li>
-        <li><strong><a href="#">Morbi vestibulum</a></strong></li>
-        <li><strong><a href="#">Fusce semper tortor a tellus</a></strong></li>
-        <li><strong><a href="#">Lorem ipsum dolor sit amet</a></strong></li>
-        <li><strong><a href="#">Morbi vestibulum</a></strong></li>
-        <li><strong><a href="#">Fusce semper tortor a tellus</a></strong></li>
-        <li><strong><a href="#">Lorem ipsum dolor sit amet</a></strong></li>
-        <li><strong><a href="#">Morbi vestibulum</a></strong></li>
-        <li><strong><a href="#">Fusce semper tortor a tellus</a></strong><a href="#"></a></li>
+        <li><a href="/changes/#id1"><strong>2.9.4.0 at 21-July-2012</strong></a></li>
+        <li><a href="/changes/#id2"><strong>2.9.3.1 at 29-Dec-2011</strong></a></li>
+        <li><a href="/changes/#id3"><strong>2.9.3.0 at 26-Dec-2011</strong></a></li>
+        <li><a href="/changes/#id4"><strong>2.9.2.4 at 9-Sept-2011</strong></a></li>
+        <li><a href="/changes/#id5"><strong>2.9.2.3 at 8-Sept-2011</strong></a></li>
+        <li><a href="/changes/#id6"><strong>2.9.2.2 at 5-Sept-2011</strong></a></li>
+        <li><a href="/changes/#id7"><strong>2.9.2.1 at 23-July-2011</strong></a></li>
+        <li><a href="/changes/#id9"><strong>2.9.1.1 at 14-Oct-2010</strong></a></li>
       </ul>
       <a class="read-more" href="/changes/">Read More</a>
       <h3>Search</h3>
