--- a/templates/index.html
+++ b/templates/index.html
@@ -63,8 +63,6 @@
         <li><a href="/changes/#id4"><strong>2.9.2.4 at 9-Sept-2011</strong></a></li>
         <li><a href="/changes/#id5"><strong>2.9.2.3 at 8-Sept-2011</strong></a></li>
         <li><a href="/changes/#id6"><strong>2.9.2.2 at 5-Sept-2011</strong></a></li>
-        <li><a href="/changes/#id7"><strong>2.9.2.1 at 23-July-2011</strong></a></li>
-        <li><a href="/changes/#id9"><strong>2.9.1.1 at 14-Oct-2010</strong></a></li>
       </ul>
       <a class="read-more" href="/changes/">Read More</a>
       <h3>Search</h3>
@@ -77,5 +75,20 @@
           <input id="newsletter-submit" type="submit" value="go"  />
         </p>
       </div>#}
+      <h3>More links</h3>
+      <ul id="recent-entries">
+        <li><a href="http://wiki.wxpython.org/" alt=""><strong>wxPyWiki</strong></a></li>
+        <li><a href="http://wxpython.org/blog/" alt=""><strong>wxForty-Two</strong></a></li>
+        <li><a href="/maillist/" alt=""><strong>Mail lists</strong></a></li>
+        <li><a href="/irc/" alt=""><strong>Chat</strong></a></li>
+        <li><a href="http://svn.wxwidgets.org/viewvc" alt=""><strong>Browse code</strong></a></li>
+        <li><a href="http://trac.wxwidgets.org/" alt=""><strong>Report a bug</strong></a></li>
+        <li><a href="http://trac.wxwidgets.org/" alt=""><strong>Submit a patch</strong></a></li>
+        <li><a href="http://trac.wxwidgets.org/" alt=""><strong>Feature Request</strong></a></li>
+        <li><a href="/contribute/" alt=""><strong>Contribute</strong></a></li>
+        <li><a href="/purchase/" alt=""><strong>Support</strong></a></li>
+        <li><a href="/codeguidelines/" alt=""><strong>Code guidelines</strong></a></li>
+      </ul>
+
     </div>
 {% endblock %}
