purchase, contributing, maillists, codeguidelines, irc pages

--- a/templates/index.html
+++ b/templates/index.html
@@ -80,7 +80,7 @@
       <ul id="recent-entries">
         <li><a href="http://wiki.wxpython.org/" alt=""><strong>wxPyWiki</strong></a></li>
         <li><a href="http://wxpython.org/blog/" alt=""><strong>wxForty-Two</strong></a></li>
-        <li><a href="/maillist/" alt=""><strong>Mail lists</strong></a></li>
+        <li><a href="/maillists/" alt=""><strong>Mail lists</strong></a></li>
         <li><a href="/irc/" alt=""><strong>Chat</strong></a></li>
         <li><a href="http://svn.wxwidgets.org/viewvc" alt=""><strong>Browse code</strong></a></li>
         <li><a href="http://trac.wxwidgets.org/" alt=""><strong>Submit a patch or bug</strong></a></li>
