screenshots for slider

--- a/templates/index.html
+++ b/templates/index.html
@@ -16,8 +16,8 @@
             <div class="slides-holder">
                 <div class="slide-meta">
                     <div class="description">
-                        <h3>wxpython.org</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi vestibulum imperdiet hendrerit. Quisque tincidunt aliquam</p>
+                        <h3>Task Coach</h3>
+                        <p>Task Coach is a simple open source todo manager to keep track of personal tasks and todo lists.</p>
                     </div>
                     <ul class="controls">
                         <li class="left">Left</li>
