--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -151,18 +151,20 @@ a {
 	height:209px;
 	margin-left:45px;
 	margin-top:35px;
-	background:url(../img/bg_slide01.png) no-repeat left top;
+	background:url(../img/slider/taskcoach.png) no-repeat left top;
 }
 .slide-meta {
 	float:left;
-	width:440px;
-	height:40px;
+	width:460px;
+	height:50px;
 	margin-top:160px;
 	color:#fff;
+    background: #323232;
 }
 .description {
+    padding: 2px;
 	width:340px;
-	margin-left:10px;
+	margin-left:8px;
 	float:left;
 }
 .slide-meta .description h3 { font:bold Arial, Helvetica, sans-serif; }
@@ -173,6 +175,7 @@ a {
 	line-height:14px;
 }
 ul.controls {
+    padding: 5px;
 	display:block;
 	float:right;
 	list-style:none;
